Bug 405256 - "Compile error in nsNativeDragTarget.h with MingW GCC because of missing shobjidl.h" [p=bengt.erik.soderstrom@telia.com (Bengt-Erik Soderstrom) r=bsmedberg a1.9=damons]