widget/src/windows/nsNativeDragTarget.h
@@ -42,9 +42,12 @@
 #include "nsIDragSession.h"
 #include <ole2.h>
 #include <shlobj.h>
-#ifndef WINCE
+
+#ifndef WINCE 
 #ifndef IDropTargetHelper
+#ifndef __MINGW32__   // MingW does not provide shobjidl.h.
 #include <shobjidl.h> // Vista drag image interfaces
+#endif  // MingW
 #endif
 #endif  // WINCE
 
